maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:48: error: expected class or object definition
def isDirectionFree(dir:Direction) : Boolean = {
^Escaper:59: error: Unmatched closing brace '}' ignored here
}
^